# tanamigrator

./: .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  OPTIONALITY_REFACTOR_PLAN.md  ORIGINAL_SCRIPT.py  PROJECT_SCAFFOLD.md  README.md  pyproject.toml
.claude/commands/: devtemplate-feature-checklist.md  devtemplate-release.md  land-the-plane.md  save-work-session.md  sync-devtemplate.md
.devcontainer/: CHANGELOG.md  DEVPODS_README.md  DEVPODS_TROUBLESHOOTING.md  Dockerfile  Dockerfile.devpods  PROJECT-SETUP-GUIDE.md  README.md  devcontainer.devpods.json  devcontainer.json  devcontainer.minimal.json
.devcontainer/docs/: .gitignore  ADOPTION-GUIDE.md  CLAUDE.md
.devcontainer/scripts/setup/: .gitignore  ENVIRONMENT_COMPATIBILITY.md  README.md  helpers.sh  menu.sh
.devcontainer/scripts/setup/features/: 1password-cli.sh  README.md  agent-browser.sh  agent-os.sh  auto-claude.sh  bmad-v6.sh  ccusage.sh  claude-code.sh  codemachine.sh  codex-cli.sh  docker-outside.sh  gemini-cli.sh  linear-agent-harness.sh  mcp-archon.sh  mcp-context7.sh  mcp-linear.sh  mcp-openmemory.sh  mcp-perplexity.sh  mcp-puppeteer.sh  speckit.sh  specstory.sh  vibe-kanban.sh  z-ai.sh
.github/workflows/: build.yml
.specstory/: .project.json
assets/: icon.icns
docs/work-sessions/: 2026-02-05-0311-tanamigrator-add-devtemplate.md
src/: __init__.py  main.py
src/core/: __init__.py  converter.py  exceptions.py  models.py  scanner.py
src/gui/: __init__.py  app.py  components.py  styles.py
tests/: __init__.py  test_converter.py  test_scanner.py
tests/fixtures/: sample_tana_export.json
